istio/nginx-default.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-istio
  namespace: default
  labels:
    app: nginx-istio
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: nginx-istio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-istio
  namespace: default
  labels:
    app: nginx-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-istio
  template:
    metadata:
      labels:
        app: nginx-istio
    spec:
      containers:
        - name: nginx-istio
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
