istio/istio-gw-staging.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-stg
  namespace: default
spec:
  selector:
    istio: istio-ingressgateway-staging
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-staging
  namespace: staging
spec:
  hosts:
    - "*"
  gateways:
    - gateway-stg
  http:
    - route:
        - destination:
            host: nginx-istio
            port:
              number: 80
